fix: vertically align dark mode toggle button in navbar

--- a/css/main.css
+++ b/css/main.css
@@ -312,6 +312,11 @@ nav {
   background: #20364c;
 }
 
+#dark-mode-toggle {
+  margin-top: 8px;
+  vertical-align: middle;
+}
+
 .navbar-brand {
   font-size: 2.15rem !important;
   font-weight: 500;
